añadiendo Un nuevo banner

--- a/contactenos.html
+++ b/contactenos.html
@@ -47,7 +47,7 @@
     <!--------------------------LOGO-------------------->
     <!-------------------------------------------------->
     <div class="logo_principal">
-      <img class="logo" src="img/logo.png" />
+      <img class="logo" src="img/lol.jpg" />
     </div>
     <!-------------------------------------------------->
     <!-------------------------MENU--------------------->
