añadiendo un footer

--- a/contactenos.html
+++ b/contactenos.html
@@ -81,5 +81,9 @@
         <form class="form_2"></form>
       </div>
     </div>
+    <!-------------------------------------------------->
+    <!--------------------FOOTER------------------------>
+    <!-------------------------------------------------->
+    <footer></footer>
   </body>
 </html>
